record motion tracking and fisheye data into rosbags, see hello_area_description project

--- a/java_basic_examples/hello_area_description/src/main/res/values/strings.xml
+++ b/java_basic_examples/hello_area_description/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="metadata_not_read">"Meta Data cannot be read"</string>
     <string name="motiontracking_permission">"Motion Tracking permission needed!"</string>
     <string name="arealearning_permission">"Area Learning permission needed!"</string>
+    <string name="exception_tango_permission">"Tango.PERMISSIONTYPE_DATASET required!"</string>
     <string name="no_uuid">"no ADFs"</string>
     <string name="number_of_adfs">"No of ADFs: "</string>
     <string name="na">"N/A"</string>
